2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.c: Ignore the return value of strftime() and
	printf().
	* libmisc/failure.c: Fix syslog call. The UID is not available.
	User the username specified in the utmp/utmpx entry.

2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Avoid implicit conversion of pointers to
	booleans.
	* lib/defines.h: Ignore return values of setlocale() except the
	first call.
	* lib/defines.h: Fix a splint observer warning by using an
	intermediate variable (old_locale).

2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.c: Check return values. If lseek() failed, avoid
	reading or writing at an unspecified location. Log to syslog in
	case of failure when reading a faillog entry or writing in
	faillog or btmp.
	* libmisc/failure.c: Check if the file exist before opening it.
	* libmisc/failure.c: Log failures of open() and close() when
	necessary.

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Add the getrange() prototype.
	* lib/prototypes.h: Fix the valid_field() prototype (does not
	return an bool).
	* lib/prototypes.h: Fix the valid() prototype (it does return a
	bool).

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/getdef.c: Fix the getdef_ulong() prototype.
	* lib/getdef.h: Fix the getdef_ulong() prototype.

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Use getrange to parse the range of users.
	* src/lastlog.c: umin and umax do not need to be signed long. Use
	an unsigned long which might be needed to parse a GID or UID. Add
	the has_umin and has_umax to replace the -1 values.
	* src/lastlog.c: Cast dates to time_t.
	* src/lastlog.c: Prefix lastlog errors with "lastlog: ".

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getlong.c: Reset errno before calling strtol().