@@ -99,9 +99,11 @@ extern void sanitize_env (void);
 extern void change_field (char *, size_t, const char *);
 extern int valid_field (const char *, const char *);
 
-/* find_new_ids.c */
-extern int find_new_uid (bool sys_user, uid_t *uid, uid_t const *preferred_uid);
+/* find_new_gid.c */
 extern int find_new_gid (bool sys_group, gid_t *gid, gid_t const *preferred_gid);
+
+/* find_new_uid.c */
+extern int find_new_uid (bool sys_user, uid_t *uid, uid_t const *preferred_uid);
 
 /* getlong.c */
 extern int getlong(const char *numstr, long int *result);
